fix: solving minor UI/UX issues on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -73,3 +73,11 @@ h2 {
         overflow-y: scroll;
     }
 }
+
+/* Small devices (phones, 480px and down) */
+  @media screen and (max-width:480px){
+    .section {
+        min-height: unset;
+        padding-bottom: 20px;
+    }
+  }
